spacing issues

--- a/public/css/app.scss
+++ b/public/css/app.scss
@@ -48,7 +48,7 @@ a {
 
 p {
     padding: 0 0 10px 0;
-
+letter-spacing:0;
     font-weight: 200;
 }
 
